<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fatesg.bcb.Cadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-287dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/txtSeCadastre"/>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtNome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtSobrenome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtSenhaCadastro"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastrar" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
