<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fatesg.bcb.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtLogin" />

        <EditText
            android:id="@+id/txtSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtSenhaLogin"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLoginAcessar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"/>

        <Button
            android:id="@+id/btnCadastroLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastro"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
